--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ dependencies:
   flutter_polyline_points: ^2.1.0
   flutter_image_compress: ^2.3.0
   provider: ^6.1.2
-  freshchat_sdk: ^0.10.20
+  freshchat_sdk: ^0.10.21
   connectivity_plus: ^6.0.5
   shimmer: ^3.0.0
   flutter_screenutil: ^5.9.3
@@ -73,7 +73,13 @@ dependencies:
   webview_flutter: ^4.9.0
   dio: ^5.7.0
   dio_smart_retry: ^6.0.0
-  facebook_app_events: ^0.19.3
+
+  facebook_app_events:
+    git:
+      url: https://github.com/oddbit/flutter_facebook_app_events
+      ref: fix/iOS-issue-0.19.4
+
+
   flutter_easyloading: ^3.0.5
   get_it: ^8.0.0
   bloc: ^8.1.4
