--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -17,16 +17,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>weevo-bfa67.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:183711190435:ios:9e4d3fa2adb54e9bf2de16</string>
+	<key>New item</key>
+	<string>GoogleService-Info-2.plist</string>
 </dict>
 </plist>
