--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
       ref: fix/iOS-issue-0.19.4
 
 
+  pin_code_fields: ^8.0.1
   flutter_easyloading: ^3.0.5
   get_it: ^8.0.0
   bloc: ^8.1.4
