--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ dependencies:
   json_serializable: ^6.8.0
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
