--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ dependencies:
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   pretty_dio_logger: ^1.4.0
+  easy_stepper: ^0.8.5+1
 
 dev_dependencies:
   flutter_test:
