--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '14.0'
-source 'https://github.com/CocoaPods/Specs'
+# platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -33,26 +32,13 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  target 'RunnerTests' do
+    inherit! :search_paths
+  end
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    # Apply additional Flutter iOS build settings
     flutter_additional_ios_build_settings(target)
-
-    # Set iOS deployment target and modify xcconfig files
-    target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
-      
-      if config.base_configuration_reference
-        xcconfig_path = config.base_configuration_reference.real_path
-        if File.exist?(xcconfig_path)
-          xcconfig = File.read(xcconfig_path)
-          xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
-          File.open(xcconfig_path, "w") { |file| file.write(xcconfig_mod) }
-        end
-      end
-    end
   end
 end
